yeah, a lot of work